changed a few bugs

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/style.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="shortcut icon" href="img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="js/main.js"></script>
     <title>Mittagstisch Hirschthal</title>
 </head>
 
@@ -40,18 +40,18 @@
                 </p>
             </div>
             <div class="img">
-                <img src="/Mittagstisch/img/Outdoor%20Dining.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="img/Outdoor%20Dining.png" alt="Schule Hirschthal" class="img-text-container-img animated-img">
             </div>
         </div>
         <div class="small-break"></div>
         <div class="img-text-two">
             <div class="img">
-                <img src="/Mittagstisch/img/Muffins%20from%20Proton%20Mail.JPG" alt="Schule Hirschthal" class="img-text-container-img animated-img">
+                <img src="img/Muffins%20from%20Proton%20Mail.JPG" alt="Schule Hirschthal" class="img-text-container-img animated-img">
             </div>
             <div class="text">
                 <h2 class="animated-title">So sind wir für euch da...</h2>
                 <div class="opening-times"></div>
-                <p>Für mehr Informationen schauen Sie bitte unsere <a href="/Mittagstisch/html/angebot.html" class="animated-link">Angebotseite</a> an.</p>
+                <p>Für mehr Informationen schauen Sie bitte unsere <a href="html/angebot.html" class="animated-link">Angebotseite</a> an.</p>
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
     </div>
     <div class="big-break"></div>
     <div class="rules">
-        <a href="/Mittagstisch/files/Richtlinien.pdf" class="animated-link">
+        <a href="files/Richtlinien.pdf" class="animated-link">
             <div class="title-signin button animated-button">
                 <p>Zu den Richtlinien</p>
             </div>
