--- a/html/angebot.html
+++ b/html/angebot.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/angebot.css">
-    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../css/angebot.css">
+    <link rel="shortcut icon" href="../img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="../js/main.js"></script>
     <title>Angebot</title>
 </head>
 
@@ -23,7 +23,7 @@
                 <div class="opening-times"></div>
             </div>
             <div class="img">
-                <img src="/Mittagstisch/img/drawing.jpg" alt="drawing" class="img-text-container-img animated-img">
+                <img src="../img/drawing.jpg" alt="drawing" class="img-text-container-img animated-img">
             </div>
         </div>
         <div class="small-break"></div>
@@ -37,16 +37,13 @@
             <div class="small-break"></div>
         </div>
         <div class="small-break"></div>
-        <h1 class="animated-title">Preise</h1>
         <div class="img-text-two">
             <div class="img">
-                <img src="/Mittagstisch/img/Inbox%20Brot.jpg" alt="Kekse" class="img-text-container-img animated-img">
+                <img src="../img/Inbox%20Brot.jpg" alt="Kekse" class="img-text-container-img animated-img">
             </div>
             <div class="text">
                 <div class="price-table">
-                    <p>
-                        Kosten für betreutes Essen pro Kind: CHF 20.00
-                    </p><br>
+                    <h1 class="animated-title">Preise</h1>
                     <table>
                         <thead>
                         <tr>
@@ -75,7 +72,7 @@
                     <p>Kosten bei Abmeldung unter 7 Tagen pro Tag: Keine Rückerstattung</p>
                 </div>
                 <div class="button-container">
-                    <a href="/Mittagstisch/files/TarifNeu.pdf" class="title-signin button animated-link">
+                    <a href="../files/TarifNeu.pdf" class="title-signin button animated-link">
                         <p>Zum Tarifblatt</p>
                     </a>
                 </div>
