--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Mittagstisch/css/all.css">
-    <link rel="stylesheet" href="/Mittagstisch/css/uber-uns.css">
-    <link rel="shortcut icon" href="/Mittagstisch/img/logo/logo_notext2.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/all.css">
+    <link rel="stylesheet" href="../css/uber-uns.css">
+    <link rel="shortcut icon" href="../img/logo/logo_notext2.png" type="image/x-icon">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="/Mittagstisch/js/main.js"></script>
+    <script src="../js/main.js"></script>
     <title>Über Uns</title>
 </head>
 
@@ -23,7 +23,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/silvia.png" alt="Silvia Müller">
+                        <img src="../img/people/silvia.png" alt="Silvia Müller">
                     </div>
                     <div class="team-user-name">
                         <h2>Silvia Müller</h2>
@@ -36,7 +36,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/maegi.jpg" alt="Mägi Hauri">
+                        <img src="../img/people/maegi.jpg" alt="Mägi Hauri">
                     </div>
                     <div class="team-user-name">
                         <h2>Mägi Hauri</h2>
@@ -48,7 +48,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/carola.png" alt="Carola Bazalar">
+                        <img src="../img/people/carola.png" alt="Carola Bazalar">
                     </div>
                     <div class="team-user-name">
                         <h2>Carola Bazalar</h2>
@@ -60,10 +60,11 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/basler.jpg" alt="Regula Basler">
+                        <img src="../img/people/basler.jpg" alt="Regula Basler">
                     </div>
                     <div class="team-user-name">
                         <h2>Regula Basler</h2>
+                        <p class="team-user-title">In der Ruhe liegt die Kraft.</p>
                         <p>Löst alle möglichen Kindersorgen – ruhig und mit viel Geduld.</p>
                     </div>
                 </div>
@@ -71,7 +72,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/melanie.png" alt="Melanie Hauri">
+                        <img src="../img/people/melanie.png" alt="Melanie Hauri">
                     </div>
                     <div class="team-user-name">
                         <h2>Melanie Hauri (Vorstand)</h2>
@@ -83,7 +84,7 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/irene.png" alt="Irene Bärtschi">
+                        <img src="../img/people/irene.png" alt="Irene Bärtschi">
                     </div>
                     <div class="team-user-name">
                         <h2>Irene Bärtschi (Vorstand)</h2>
@@ -95,10 +96,11 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="/Mittagstisch/img/people/margret.png" alt="Margret Haidacher">
+                        <img src="../img/people/margret.png" alt="Margret Haidacher">
                     </div>
                     <div class="team-user-name">
                         <h2>Margret Haidacher (Vorstand)</h2>
+                        <p class="team-user-title">Essen gut – alles gut!</p>
                         <p>
                             Probiert das Essen so zu wählen, dass alle Bäuchlein glücklich sind. <br>
                             Eine echte Herausforderung, der sie sich gerne stellt.</p>
