--- a/html/ueber_uns.html
+++ b/html/ueber_uns.html
@@ -60,12 +60,12 @@
             <div class="team-user">
                 <div class="team-user-container">
                     <div class="team-user-img">
-                        <img src="../img/people/basler.jpg" alt="Regula Basler">
+                        <img src="../img/people/elena.png" alt="Elena Staltner">
                     </div>
                     <div class="team-user-name">
-                        <h2>Regula Basler</h2>
-                        <p class="team-user-title">In der Ruhe liegt die Kraft.</p>
-                        <p>Löst alle möglichen Kindersorgen – ruhig und mit viel Geduld.</p>
+                        <h2>Elena Staltner</h2>
+                        <p class="team-user-title">Wenn Plan A nicht klappt,</p>
+                        <p>keine Sorge: Es gibt noch 25 weitere Buchstaben.</p>
                     </div>
                 </div>
             </div>
